# Arthur-IA

./: README.md  article.md  pyproject.toml
src/blog_redactor_employee/: crew.py  main.py
src/blog_redactor_employee/config/: agents.yaml  recherche_et_redaction.json  tasks.yaml
src/blog_redactor_employee/tools/: custom_tool.py
