[project]
name = "blog_redactor_employee"
version = "0.1.0"
description = "blog_redactor_employee using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.14.7",
    "jambo",
]

[project.scripts]
blog_redactor_employee = "blog_redactor_employee.main:run"
run_crew = "blog_redactor_employee.main:run"
train = "blog_redactor_employee.main:train"
replay = "blog_redactor_employee.main:replay"
test = "blog_redactor_employee.main:test"
run_with_trigger = "blog_redactor_employee.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
